# ChangeLog for gnome-extra/acme
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/acme/Attic/ChangeLog,v 1.8 2003/02/12 06:51:30 vapier Exp $

*acme-2.0.2 (2 Feb 2003)

  02 Feb 2003; foser <foser@gentoo.org> acme-2.0.2.ebuild :
  New version, some dep fixes (#13828)

*acme-2.0 (14 Jan 2003)

  14 Jan 2003; foser <foser@gentoo.org> acme-2.0.ebuild :
  New version, fixed deps (#13918)
  Now uses gnome.org eclass for SRC_URI

*acme-1.99.12 (17 Dec 2002)

  17 Dec 2002; foser <foser@gentoo.org> acme-1.99.12.ebuild :
  New version, fixed deps

*acme-1.99.10 (07 Dec 2002)

  07 Dec 2002; foser <foser@gentoo.org> acme-1.99.10.ebuild :
  New version

*acme-1.99.9 (28 Oct 2002)

  28 Oct 2002; foser <foser@gentoo.org> acme-1.99.9.ebuild :
  New version

*acme-1.99.8 (24 Oct 2002)

  24 Oct 2002; foser <foser@gentoo.org> Changelog, acme-1.99.8 :

  New package. Thanks to Marco Pfattner <gentoo@pffatner.de>