@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/acme/Attic/acme-2.0.2.ebuild,v 1.4 2003/02/13 12:15:26 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/acme/Attic/acme-2.0.2.ebuild,v 1.5 2003/02/21 02:12:29 agriffis Exp $
 
 inherit gnome2
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://www.hadess.net/misc-code.php3"
 LICENSE="GPL-2"
 SLOT="0"
 
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ~ppc ~alpha"
 
 DEPEND=">=gnome-base/libgnomeui-2
 	>=gnome-base/libglade-2
