@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/Attic/bug-buddy-2.2.102.ebuild,v 1.3 2003/02/13 12:16:21 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/Attic/bug-buddy-2.2.102.ebuild,v 1.4 2003/02/21 02:16:43 agriffis Exp $
 
 inherit debug 
 inherit gnome2
@@ -10,7 +10,7 @@ DESCRIPTION="Bug Buddy is a Bug Report helper for Gnome"
 HOMEPAGE="http://www.gnome.org/"
 SLOT="2"
 LICENSE="Ximian-logos GPL-2"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ~ppc ~alpha"
 
 RDEPEND=">=gnome-base/gconf-1.2.0
 	>=gnome-base/libglade-2.0.0
