@@ -1,9 +1,12 @@
 # ChangeLog for gnome-extra/bug-buddy
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.12 2003/02/12 06:52:06 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/bug-buddy/ChangeLog,v 1.13 2003/02/21 02:16:43 agriffis Exp $
 
 
 *bug-buddy-2.2.102 (04 Feb 2003)
+
+  20 Feb 2003; Aron Griffis <agriffis@gentoo.org> bug-buddy-2.2.102.ebuild :
+  Add ~alpha to KEYWORDS
   
   04 Feb 2003; Spider <spider@gentoo.org> bug-buddy-2.2.102.ebuild :
   new version, should fix my crashing bugs
