@@ -1,8 +1,11 @@
 # ChangeLog for gnome-extra/acme
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/acme/Attic/ChangeLog,v 1.8 2003/02/12 06:51:30 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-extra/cvs-repo/gentoo-x86/gnome-extra/acme/Attic/ChangeLog,v 1.9 2003/02/21 02:12:29 agriffis Exp $
 
 *acme-2.0.2 (2 Feb 2003)
+
+  20 Feb 2003; Aron Griffis <agriffis@gentoo.org> acme-2.0.2.ebuild :
+  Add ~alpha to KEYWORDS
 
   02 Feb 2003; foser <foser@gentoo.org> acme-2.0.2.ebuild :
   New version, some dep fixes (#13828)
